# ic-wall

./: .env.development  .env.production  .env.template  .gitignore  Cargo.toml  Makefile  README.md  craco.config.js  dfx.json  next-env.d.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.paths.json
backend/user_profile/: Cargo.toml  lib.rs  user_profile.did
backend/wall/: Cargo.toml  lib.rs  wall.did
components/: Header.tsx  Post.tsx  SetUsername.tsx  Spinner.tsx  Wall.tsx
components/header/: EthAccount.tsx  ICLogin.tsx  ICPrincipal.tsx  Username.tsx
components/wall/: Userinfo.tsx
eth/: connectors.ts  hooks.ts
ic/: actor.js  context.tsx  identity.ts
pages/: _app.tsx  index.tsx
public/: index.html  manifest.json
src/: index.tsx
src/components/: Delayed.tsx  Header.tsx
src/components/header/: EthAccount.tsx  ICLogin.tsx  ICPrincipal.tsx  Username.tsx
src/components/wall/: SetUsername.tsx  UserInfo.tsx  WelcomeToast.tsx  WritePost.tsx  index.tsx
src/components/wall/post/: PostMeta.tsx  index.tsx
src/eth/: connectors.ts  hooks.ts
src/hooks/: useENSName.ts
src/ic/: actor.ts  context.tsx  identity.ts
src/ic/canisters_generated/profile/: profile.did.d.ts  profile.did.js
src/ic/canisters_generated/wall/: index.js  wall.did.d.ts  wall.did.js  (+1 more)
src/pages/: UserWall.tsx  Wall.tsx
src/store/: index.ts  profile.ts  store.ts  wall.ts
src/store/actions/: profile.ts  wall.ts
src/styles/: globals.css
src/utils/: index.ts
store/: store.ts
store/actions/: profile.ts  wall.ts
utils/: index.ts
(+2 files in other folders)
